# signate1106

./: poetry.lock.collab  pyproject.toml  pyproject.toml.collab
conf/base/: catalog.yml  logging.yml
conf/base/parameters/: data_science.yml
conf/local/: mlflow.yml
docs/source/: conf.py  index.rst
src/: setup.py
src/signate1106/: __init__.py  __main__.py  settings.py
src/signate1106/modules/: __init__.py  nn_model.py
src/signate1106/pipelines/data_preprocessing/: README.md  __init__.py  nodes.py  pipeline.py
src/signate1106/pipelines/data_science/: nodes.py  pipeline.py
src/tests/: test_run.py
